// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render 1`] = `
<span
  style={Object {}}
>
  __TEXT__
</span>
`;

exports[`Text should render with attributes 1`] = `
<span
  style={
    Object {
      "color": "var(--body-text)",
      "fontSize": "10px",
      "fontWeight": 400,
    }
  }
>
  __TEXT__
</span>
`;
